--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,36 @@
+# Node modules
 node_modules/
+client/node_modules/
+server/node_modules/
+
+# Build / dist folders
+dist/
+build/
+client/dist/
+dist-ssr/
+
+# Env files
+*.env
 server/.env
 client/.env
-build/
-dist/
+*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
