--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,10 +2,10 @@
     "version":2,
     "builds":[{
         "src":"./index.js",
-        "use":"@vercel/model"
+        "use":"@vercel/node"
     }],
     "routes":[{
         "src":"/(.*)",
-        "dest":"/"
+        "dest":"/index.js"
     }]
 }
